accounts page changed

--- a/client/src/components/accounts/accounts.css
+++ b/client/src/components/accounts/accounts.css
@@ -37,3 +37,12 @@ body, html {
     padding: 5px 10px 5px 10px;
     border-radius: 27px;
 }
+
+.accounts-list:hover{
+
+    background-color:rgb(24, 144, 255); 
+}
+
+.account-change-cursor:hover{
+    cursor: pointer;
+}
