--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -24,10 +24,10 @@
    /* height: 2070px;
   
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /* background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
   }
 
   .alignCenter{
